welcome.lessons.welcome.array.notriples.NoTriples.scala.error
array667:5: error: not found: value length
  for (i<-1 to length-1){if (memoire==6 && num(i)==6){occurence66=occurence66+1};if (memoire==6 && num(i)==7){occurence67=occurence67+1}}
               ^array667:5: error: not found: value num
  for (i<-1 to length-1){if (memoire==6 && num(i)==6){occurence66=occurence66+1};if (memoire==6 && num(i)==7){occurence67=occurence67+1}}
                                           ^array667:5: error: not found: value num
  for (i<-1 to length-1){if (memoire==6 && num(i)==6){occurence66=occurence66+1};if (memoire==6 && num(i)==7){occurence67=occurence67+1}}
                                                                                                   ^